CSS - fixed badly aligned slider controls

--- a/server/public/CSS/stylesheet.css
+++ b/server/public/CSS/stylesheet.css
@@ -1160,7 +1160,8 @@ body {
           display: flex;
           flex-direction: row;
 
-          >*.slider-labels {
+          box-sizing: border-box;
+                  >*.slider-labels {
             width: min-content;
             min-width: 120px;
           }
@@ -1192,7 +1193,7 @@ body {
           }
 
           align-items: center;
-        }
+}
       }
 
     }
